# requests-wininet

./: .gitignore  README.md  pyproject.toml
.github/workflows/: build.yml  pypi.yml
requests_wininet/: __init__.py
tests/: test_wininet_adapter.py
